--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dev_dependencies:
   build_runner:
   auto_route_generator:
   injectable_generator:  
+  
+dependency_overrides:
+  analyzer: '0.39.14'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
