--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,32 +25,31 @@ dependencies:
     sdk: flutter
   #localization
   easy_localization: ^2.3.2
-  
+
   # state manegement  
   stacked: ^1.7.4
-  stacked_services:
-  auto_route:
-  get_it:
-  injectable:
-
+  stacked_services: null
+  auto_route: null
+  get_it: null
+  injectable: null
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  observable_ish:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
-  auto_route_generator:
-  injectable_generator:  
-  
+  build_runner: null
+  auto_route_generator: null
+  injectable_generator: null
+
 dependency_overrides:
   analyzer: '0.39.14'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -62,13 +61,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/translations/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -88,3 +84,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
