--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -26,7 +26,7 @@ dependencies:
   #localization
   easy_localization: ^2.3.2
 
-  # state manegement  
+  # state manegement
   stacked: ^1.7.4
   stacked_services: null
   auto_route: null
@@ -45,14 +45,10 @@ dev_dependencies:
   auto_route_generator: null
   injectable_generator: ^1.0.4
 
-dependency_overrides:
-  analyzer: '0.39.14'
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -84,4 +80,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
